--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^17.0.1",
     "react-gesture-responder": "^2.1.0",
     "react-grid-dnd": "^2.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
